--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <div class="subheading mb-3">Dodhia Packaging</div>
                             <p>At Dodhia Packaging Ltd, I have developed hands-on experience as a software developer, actively involved in installing and configuring software, managing operating systems, monitoring server performance, and troubleshooting network issues to ensure uninterrupted IT operations. My responsibilities have also included configuring Outlook via IMAP/POP and performing preventive maintenance tasks, such as replacing printer components and servicing desktops.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-success">August 2024 - Novem6ber 2024</span></div>
+                        <div class="flex-shrink-0"><span class="text-success">August 2024 - November 2024</span></div>
                     </div>
                     
                 </div>
