modified index file

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <h3 class="mb-0">Technical University of Kenya</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
                             <div>Information Technology - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <p>Degree</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-success">January 2021 - November 2024</span></div>
                     </div>
@@ -98,7 +98,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Nyeri High School</h3>
                             <div class="subheading mb-3">Kenya Certificate of Secondary Education</div>
-                            <p>GPA: 3.56</p>
+                            <p>Grade B+</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-success">Febrary 2016 - December 2019</span></div>
                     </div>
